--- a/Spring Fundamentals/BonAppetit/src/main/resources/templates/fragments/commons.html
+++ b/Spring Fundamentals/BonAppetit/src/main/resources/templates/fragments/commons.html
@@ -26,7 +26,7 @@
                 </li>
 
                 <li class="nav-item col-md-4">
-                    <a class="nav-link text-primary active h5 text-stroke" href="/">Logout</a>
+                    <a class="nav-link text-primary active h5 text-stroke" th:href="@{/logout}">Logout</a>
                 </li>
             </ul>
         </div>
