add recipe functionality

--- a/Spring Fundamentals/BonAppetit/src/main/resources/templates/home.html
+++ b/Spring Fundamentals/BonAppetit/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 <header th:replace="fragments/commons::nav"></header>
 <main>
     <div class="container bg-blur rounded mt-1 mb-4">
-        <h6 class="bg-gray text-dark mb-0 mt-0">Welcome, {username}</h6>
+        <h6 class="bg-gray text-dark mb-0 mt-0">Welcome, <th:block th:text="${@userSession.getUsername()}"></th:block></h6>
         <div class="row mt-1 mb-2">
             <div class="col-6 mt-1 mb-1">
 
