--- a/Spring Fundamentals/BonAppetit/src/main/resources/templates/fragments/commons.html
+++ b/Spring Fundamentals/BonAppetit/src/main/resources/templates/fragments/commons.html
@@ -13,20 +13,28 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-nav rounded">
         <a class="nav-link text-primary active h5 text-stroke" th:href="@{/}">Bon App-étit</a>
-        <a class="nav-link text-primary active h5 text-stroke" th:href="@{/recipe-add}">Add Recipe</a>
+        <a class="nav-link text-primary active h5 text-stroke"
+           th:href="@{/recipe-add}"
+           th:if="${@userSession.isLoggedIn()}">Add Recipe</a>
 
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav row">
                 <li class="nav-item col-md-4">
-                    <a class="nav-link text-primary active h5 text-stroke" th:href="@{/login}">Login</a>
+                    <a class="nav-link text-primary active h5 text-stroke"
+                       th:href="@{/login}"
+                       th:unless="${@userSession.isLoggedIn()}">Login</a>
                 </li>
 
                 <li class="nav-item col-md-4">
-                    <a class="nav-link text-primary active h5 text-stroke" th:href="@{/register}">Register</a>
+                    <a class="nav-link text-primary active h5 text-stroke"
+                       th:href="@{/register}"
+                       th:unless="${@userSession.isLoggedIn()}">Register</a>
                 </li>
 
                 <li class="nav-item col-md-4">
-                    <a class="nav-link text-primary active h5 text-stroke" th:href="@{/logout}">Logout</a>
+                    <a class="nav-link text-primary active h5 text-stroke"
+                       th:href="@{/logout}"
+                       th:if="${@userSession.isLoggedIn()}">Logout</a>
                 </li>
             </ul>
         </div>
