--- a/Spring Fundamentals/BonAppetit/src/main/resources/templates/recipe-add.html
+++ b/Spring Fundamentals/BonAppetit/src/main/resources/templates/recipe-add.html
@@ -8,36 +8,45 @@
     <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Add recipe</span></h1>
     <hr class="hr-3 w-25 bg-white"/>
 
-    <form class="mx-auto w-25 bg-blur rounded" method="" action="/">
+    <form class="mx-auto w-25 bg-blur rounded"
+          th:method="post"
+          th:action="@{/recipe-add}"
+          th:object="${recipeData}">
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="name" class="h4 mb-2">Name</label>
             </div>
-            <textarea type="text" class="form-control" id="name" name="name"></textarea>
-            <small class="text-danger">Name error message</small>
+            <textarea type="text" class="form-control" id="name" name="name"
+                      th:field="*{name}"
+                      th:errorclass="'is-invalid alert-danger'"></textarea>
+            <small th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger">Name error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="ingredients" class="h4 mb-2">Ingredients</label>
             </div>
-            <textarea type="text" class="form-control" id="ingredients" name="ingredients"></textarea>
-            <small class="text-danger">Ingredients error message</small>
+            <textarea type="text" class="form-control" id="ingredients" name="ingredients"
+                      th:field="*{ingredients}"
+                      th:errorclass="'is-invalid alert-danger'"></textarea>
+            <small th:if="${#fields.hasErrors('ingredients')}" th:errors="*{ingredients}" class="text-danger">Ingredients error message</small>
         </div>
 
         <div class="form-group">
             <div class="text-white label-holder d-flex justify-content-center">
                 <label for="category" class="h4 mb-2">Category</label>
             </div>
-            <select class="browser-default custom-select" id="category" name="category">
+            <select class="browser-default custom-select" id="category" name="category"
+                    th:field="*{category}"
+                    th:errorclass="'is-invalid alert-danger'">
                 <option value="">Select category</option>
                 <option value="MAIN_DISH">Main Dish</option>
                 <option value="DESSERT">Dessert</option>
                 <option value="COCKTAIL">Cocktail</option>
             </select>
 
-            <small class="text-danger">Category error message</small>
+            <small th:if="${#fields.hasErrors('category')}" th:errors="*{category}" class="invalid-feedback text-danger">Category error message</small>
         </div>
 
         <div class="button-holder d-flex justify-content-center">
