--- a/Spring Fundamentals/BonAppetit/src/main/resources/templates/register.html
+++ b/Spring Fundamentals/BonAppetit/src/main/resources/templates/register.html
@@ -55,7 +55,7 @@
                    name="password"
                    th:field="*{password}"
                    th:errorclass="'is-invalid alert-danger'"/>
-            <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="invalid-feedback text-danger">Password error message</small>
+            <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger">Password error message</small>
         </div>
 
         <div class="form-group">
