--- a/Spring Fundamentals/BonAppetit/src/main/resources/templates/home.html
+++ b/Spring Fundamentals/BonAppetit/src/main/resources/templates/home.html
@@ -11,16 +11,21 @@
             <div class="col-6 mt-1 mb-1">
 
                 <div>
-                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Desserts ({count})</h3>
+                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Desserts (<th:block th:text="${desserts.size()}"></th:block>)</h3>
                     <div class="bg-dark rounded m-auto" style="height: 31vh; overflow: auto">
                         <table class="table table-striped table-dark">
-                            <tr>
+                            <tr th:each="dessert : ${desserts}">
                                 <td class="bg-warning" scope="row" style="width: 5%">
                                     <img class="mr-2 " src="/img/dessert.png" alt="Dessert" width="35px" height="35px">
                                 </td>
-                                <td>{name}</td>
-                                <td>{ingredients}</td>
-                                <td><a href="/"><img class="mr-2 " src="/img/add-to-favourites.png" alt="Dessert" width="35px" height="35px"></a></td>
+                                <td th:text="*{dessert.name}"></td>
+                                <td th:text="*{dessert.ingredients}"></td>
+                                <td>
+                                <form th:method="post" th:action="@{/add-to-favourites/{id}(id=${dessert.id})}">
+                                    <button>
+                                        <img class="mr-2 " src="/img/add-to-favourites.png" alt="Main-Dish" width="35px" height="35px">
+                                    </button>
+                                </form>
                                 </td>
                             </tr>
                         </table>
@@ -28,17 +33,23 @@
                 </div>
 
                 <div>
-                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Cocktails ({count})</h3>
+                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Cocktails (<th:block th:text="${cocktails.size()}"></th:block>)</h3>
                     <div class="bg-dark rounded m-auto" style="height: 31vh; overflow: auto">
                         <table class="table table-striped table-dark">
-                            <tr>
+                            <tr th:each="cocktail : ${cocktails}">
                                 <td class="bg-success" scope="row" style="width: 5%">
                                     <img class="mr-2 " src="/img/cocktail.png" alt="Cocktail" width="35px"
                                          height="35px">
                                 </td>
-                                <td>{name}</td>
-                                <td>{ingredients}</td>
-                                <td><a href="/"><img class="mr-2 " src="/img/add-to-favourites.png" alt="Cocktail" width="35px" height="35px"></a></td>
+                                <td th:text="*{cocktail.name}"></td>
+                                <td th:text="*{cocktail.ingredients}"></td>
+                                <td>
+                                <form th:method="post" th:action="@{/add-to-favourites/{id}(id=${cocktail.id})}">
+                                    <button>
+                                        <img class="mr-2 " src="/img/add-to-favourites.png" alt="Main-Dish" width="35px" height="35px">
+                                    </button>
+                                </form>
+                                </td>
                             </tr>
                         </table>
                     </div>
@@ -47,31 +58,37 @@
 
             <div class="col-6 mt-1 mb-1">
                 <div>
-                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Main Dishes ({count})</h3>
+                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Main Dishes (<th:block th:text="${mainDishes.size()}"></th:block>)</h3>
                     <div class="bg-dark rounded m-auto" style="height: 31vh; overflow: auto">
                         <table class="table table-striped table-dark">
-                            <tr>
+                            <tr th:each="main : ${mainDishes}">
                                 <td class="bg-info" scope="row" style="width: 5%">
                                     <img class="mr-2 " src="/img/main-dish.png" alt="Main-Dish" width="35px" height="35px">
                                 </td>
-                                <td>{name}</td>
-                                <td>{ingredients}</td>
-                                <td><a href="/"><img class="mr-2 " src="/img/add-to-favourites.png" alt="Main-Dish" width="35px" height="35px"></a></td>
+                                <td th:text="*{main.name}"></td>
+                                <td th:text="*{main.ingredients}"></td>
+                                <td>
+                                <form th:method="post" th:action="@{/add-to-favourites/{id}(id=${main.id})}">
+                                    <button>
+                                        <img class="mr-2 " src="/img/add-to-favourites.png" alt="Main-Dish" width="35px" height="35px">
+                                    </button>
+                                </form>
+                                </td>
                             </tr>
                         </table>
                     </div>
                 </div>
 
                 <div>
-                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Favourites ({count})</h3>
+                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Favourites (<th:block th:text="${favourites.size()}"></th:block>)</h3>
                     <div class="bg-dark rounded m-auto" style="height: 31vh; overflow: auto">
                         <table class="table table-striped table-dark">
-                            <tr>
+                            <tr th:each="fav : ${favourites}">
                                 <td class="bg-primary" scope="row" style="width: 5%">
                                     <img class="mr-2 " src="/img/star.png" alt="Star" width="35px" height="35px">
                                 </td>
-                                <td>{name}</td>
-                                <td>{ingredients}</td>
+                                <td th:text="*{fav.name}"></td>
+                                <td th:text="*{fav.ingredients}"></td>
                             </tr>
                         </table>
                     </div>
