--- a/Spring Fundamentals/PlannerApp/src/main/resources/templates/register.html
+++ b/Spring Fundamentals/PlannerApp/src/main/resources/templates/register.html
@@ -23,65 +23,43 @@
             <!--               id="username" name="username"/>-->
             <!--        <small class="invalid-feedback text-danger">Username error message</small>-->
 
-            <input type="text"
-                   class="form-control"
-                   id="username"
-                   name="username"
+            <input type="text" class="form-control" id="username" name="username"
                    th:field="*{username}"
                    th:errorclass="'is-invalid alert-danger'"/>
-
-            <small th:if="${#fields.hasErrors('username')}"
-                   th:errors="*{username}" class="invalid-feedback text-danger">
-                Username error message
-            </small>
+            <small th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
+                   class="invalid-feedback text-danger">Username error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="email" class="h4 mb-2">Email</label>
             </div>
-            <input type="email"
-                   class="form-control"
-                   id="email"
-                   name="email"
+            <input type="email" class="form-control" id="email" name="email"
                    th:field="*{email}"
                    th:errorclass="'is-invalid alert-danger'"/>
-            <small th:if="${#fields.hasErrors('email')}"
-                   th:errors="*{email}" class="invalid-feedback text-danger">
-                Email error message
-            </small>
+            <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+                   class="invalid-feedback text-danger">Email error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="password" class="h4 mb-2">Password</label>
             </div>
-            <input type="password"
-                   class="form-control"
-                   id="password"
-                   name="password"
+            <input type="password" class="form-control" id="password" name="password"
                    th:field="*{password}"
                    th:errorclass="'is-invalid alert-danger'"/>
-            <small th:if="${#fields.hasErrors('password')}"
-                   th:errors="*{password}" class="text-danger">
-
-            </small>
+            <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+                   class="invalid-feedback text-danger">Password error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="confirmPassword" class="h4 mb-2">Confirm Password</label>
             </div>
-            <input type="password"
-                   class="form-control"
-                   id="confirmPassword"
-                   name="confirmPassword"
+            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword"
                    th:field="*{confirmPassword}"
                    th:errorclass="'is-invalid alert-danger'"/>
-            <small th:if="${#fields.hasErrors('confirmPassword')}"
-                   th:errors="*{confirmPassword}" class="text-danger">
-
-            </small>
+            <small class="invalid-feedback text-danger">Password error message</small>
         </div>
 
         <div class="button-holder d-flex justify-content-center">
