--- a/Spring Fundamentals/PlannerApp/src/main/resources/templates/home.html
+++ b/Spring Fundamentals/PlannerApp/src/main/resources/templates/home.html
@@ -9,46 +9,50 @@
 
         <div class="col-5">
             <h3 class=" bg-gray text-dark  mb-0 mt-2">Assigned to me</h3>
-            <h6 class=" bg-gray text-dark  mb-0 mt-0">Username: {loggedUsername}</h6>
+            <h6 class=" bg-gray text-dark  mb-0 mt-0">Username: <span th:text="${@userSession.getUsername()}"></span></h6>
             <div class="bg-dark rounded m-auto" style="height: 67vh; overflow: auto">
+                <th:block th:each="task : ${assignedTasks}">
                 <ul class="list-group list-group-horizontal text-dark">
                     <li class="list-group-item bg-warning">
                         <table>
                             <tr>
                                 <td scope="row" style="width: 5%"><img class="mr-2 " src="/img/pin.png" alt="Pin" width="35px" height="35px"></td>
-                                <td style="width: 15%">{priority}</td>
-                                <td style="width: 40%">{dueDate}</td>
-                                <td><a href="/"><img src="/img/done-remove-button.png" height="35px"></a></td>
-                                <td><a href="/"><img src="/img/return.png" height="35px"></a></td>
+                                <td style="width: 15%" th:text="${task.getPriorityName()}">{priority}</td>
+                                <td style="width: 40%" th:text="${task.getDueDate()}">{dueDate}</td>
+                                <td><a th:href="@{/home/remove-task/{id}(id = *{task.getId()})}"><img src="/img/done-remove-button.png" height="35px"></a></td>
+                                <td><a th:href="@{/home/return-task/{id}(id = *{task.getId()})}"><img src="/img/return.png" height="35px"></a></td>
                             </tr>
                         </table>
                     </li>
                     <li class="list-group-item list-group-item-warning text-dark">
-                        <a>{description}</a>
+                        <a th:text="${task.getDescription()}">{description}</a>
                     </li>
                 </ul>
+                </th:block>
             </div>
         </div>
 
         <div class="col-5">
             <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">All Available Tasks</h3>
-            <h6 class="mySticky bg-gray text-dark  mb-0 mt-0">{totalUnassignedTasks} Tasks</h6>
+            <h6 class="mySticky bg-gray text-dark  mb-0 mt-0"><span th:text="${unassignedTasks.size()}"></span> Tasks</h6>
             <div class="bg-dark rounded m-auto" style="height: 67vh; overflow: auto">
+                <th:block th:each="task : ${unassignedTasks}">
                     <ul class="list-group list-group-horizontal text-dark">
                         <li class="list-group-item bg-warning">
                             <table>
                                 <tr>
                                     <td style="width: 5%"><img class="mr-2 " src="/img/pin.png" alt="Pin" width="35px" height="35px"></td>
-                                    <td style="width: 15%"><a>{priority}</a></td>
-                                    <td><a>Due Date: {dueDate}</a></td>
-                                    <td><a class="ml-3" href="/"><img src="/img/assign-to-me-button.png" height="35px"></a></td>
+                                    <td style="width: 15%"><a><span th:text="${task.getPriorityName()}"></span></a></td>
+                                    <td><a>Due Date: <span th:text="${task.getDueDate()}"></span></a></td>
+                                    <td><a class="ml-3" th:href="@{/home/assign-task/{id}(id = *{task.getId()})}"><img src="/img/assign-to-me-button.png" height="35px"></a></td>
                                 </tr>
                             </table>
                         </li>
                         <li class="list-group-item list-group-item-warning text-dark">
-                            <a>{description}</a>
+                            <a><span th:text="${task.getDescription()}"></span></a>
                         </li>
                     </ul>
+                </th:block>
             </div>
         </div>
     </div>
