--- a/Spring Fundamentals/LikeBookApp/src/main/resources/templates/fragments/commons.html
+++ b/Spring Fundamentals/LikeBookApp/src/main/resources/templates/fragments/commons.html
@@ -13,20 +13,20 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-nav rounded">
         <a class="nav-link text-white active h5" href="/">LikeBook App</a>
-        <a class="nav-link text-white active h5" href="/">Add Post</a>
+        <a th:if="${@userSession.isLoggedIn()}" class="nav-link text-white active h5" th:href="@{/post-add}">Add Post</a>
 
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav row">
                 <li class="nav-item col-md-4">
-                    <a class="nav-link text-white active h5" href="/">Login</a>
+                    <a th:unless="${@userSession.isLoggedIn()}" class="nav-link text-white active h5" th:href="@{/login}">Login</a>
                 </li>
 
                 <li class="nav-item col-md-4">
-                    <a class="nav-link text-white active h5" href="/">Register</a>
+                    <a th:unless="${@userSession.isLoggedIn()}" class="nav-link text-white active h5" th:href="@{/register}">Register</a>
                 </li>
 
                 <li class="nav-item col-md-4">
-                    <a class="nav-link text-white active h5" href="/">Logout</a>
+                    <a th:if="${@userSession.isLoggedIn()}" class="nav-link text-white active h5" th:href="@{/logout}">Logout</a>
                 </li>
             </ul>
         </div>
