--- a/Spring Fundamentals/LikeBookApp/src/main/resources/templates/home.html
+++ b/Spring Fundamentals/LikeBookApp/src/main/resources/templates/home.html
@@ -9,17 +9,17 @@
         <div class="row mt-1 mb-2">
             <div class="col-6 mt-1 mb-1">
                 <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">My Posts</h3>
-                <h6 class="mySticky bg-gray text-dark  mb-0 mt-0">Username: {username}</h6>
+                <h6 class="mySticky bg-gray text-dark  mb-0 mt-0">Username: <span th:text="${@userSession.getUsername()}"></span></h6>
                 <div class="bg-dark rounded m-auto" style="height: 68.5vh; overflow: auto">
                     <table class="table table-striped table-dark">
-                        <tr>
+                        <tr th:each="post : ${currentUserPosts}">
                             <td class="bg-info" scope="row" style="width: 5%">
                                 <img class="mr-2 " src="/img/post-bubble.png" alt="PostBubble" width="30px" height="30px">
                             </td>
-                            <td style="width: 5%" class="bg-info">{mood}</td>
-                            <td class="bg-primary" style="width: 15%">{numberOfLikes) likes</td>
-                            <td >{content}</td>
-                            <td style="width: 15%"><a class="btn-danger btn" href="/">Remove</a></td>
+                            <td style="width: 5%" class="bg-info" th:text="${post.getMoodName()}"></td>
+                            <td class="bg-primary" style="width: 15%"th:text="|${post.getLikes()} likes|"></td>
+                            <td th:text="${post.getContent()}"></td>
+                            <td style="width: 15%"><a class="btn-danger btn" th:href="@{/home/remove-post/{id}(id=${post.getId()})}">Remove</a></td>
                         </tr>
                     </table>
                 </div>
@@ -27,17 +27,17 @@
 
             <div class="col-6 mt-1 mb-1">
                 <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">All Other Posts</h3>
-                <h6 class="mySticky bg-gray text-dark  mb-0 mt-0">{otherUsersPostsTotalCount} total posts</h6>
+                <h6 class="mySticky bg-gray text-dark  mb-0 mt-0"><span th:text="${otherUsersPosts.size()}"></span> total posts</h6>
                 <div class="bg-dark rounded m-auto" style="height: 68.5vh; overflow: auto">
-                    <th:block>
+                    <th:block th:each="post : ${otherUsersPosts}">
                         <br>
                         <ul class="list-group list-group-horizontal text-dark">
                             <li class="list-group-item">
                                 <table>
                                     <tr>
-                                        <td style="width: 15%"><a> {username}: </a></td>
+                                        <td style="width: 15%"><a th:text="|${post.getCreatedBy()}:|"> </a></td>
                                         <td>
-                                            <a>{content}</a>
+                                            <a th:text="${post.getContent()}"></a>
                                         </td>
                                     </tr>
                                 </table>
@@ -45,9 +45,12 @@
                             <li class="list-group-item bg-gray">
                                 <table>
                                     <tr>
-                                        <td style="width: 10%">Mood: {mood}</td>
-                                        <td class="text-primary">{numberOfLikes} likes</td>
-                                        <td><a class="ml-3 text-danger" href="/"><img src="/img/like.png" width="43px" height="40px"></a></td>
+                                        <td style="width: 10%"><span th:text="|Mood: ${post.getMoodName()}|"></span></td>
+                                        <td class="text-primary"><span th:text="|${post.getLikes()} likes|"></span></td>
+                                        <td><a class="ml-3 text-danger" th:href="@{/home/like-post/{id}(id=*{post.getId()})}">
+                                                <img src="/img/like.png" width="43px" height="40px">
+                                            </a>
+                                        </td>
                                     </tr>
                                 </table>
                             </li>
