--- a/Spring Fundamentals/LikeBookApp/src/main/resources/templates/post-add.html
+++ b/Spring Fundamentals/LikeBookApp/src/main/resources/templates/post-add.html
@@ -8,28 +8,42 @@
     <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Add post</span></h1>
     <hr class="hr-3 w-25 bg-white"/>
 
-    <form class="mx-auto w-25 bg-blur rounded" method="" action="/" >
+    <form class="mx-auto w-25 bg-blur rounded"
+          th:method="post"
+          th:action="@{/post-add}"
+          th:object="${postData}">
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="content" class="h4 mb-2">Content</label>
             </div>
-            <textarea type="text" class="form-control" id="content" name="content"></textarea>
-            <small class="text-danger">Content error message</small>
+            <textarea type="text"
+                      class="form-control"
+                      id="content"
+                      name="content"
+                      th:field="*{content}"
+                      th:errorclass="'is-invalid alert-danger'"></textarea>
+
+            <small th:if="${#fields.hasErrors('content')}"
+                   th:errors="*{content}"
+                   class="invalid-feedback text-danger">Content error message</small>
         </div>
 
         <div class="form-group">
             <div class="text-white label-holder d-flex justify-content-center">
                 <label for="mood" class="h4 mb-2">Mood</label>
             </div>
-            <select class="browser-default custom-select" id="mood" name="mood">
+            <select class="browser-default custom-select" id="mood" name="mood"
+                    th:field="*{mood}"
+                    th:errorclass="'is-invalid text-danger'">
                 <option value="">Select mood</option>
-                <option value="HAPPY">Happy</option>
-                <option value="SAD">Sad</option>
-                <option value="INSPIRED">Inspired</option>
+                <option value="Happy">Happy</option>
+                <option value="Sad">Sad</option>
+                <option value="Inspired">Inspired</option>
             </select>
-
-            <small class="text-danger">Mood error message</small>
+            <small th:if="${#fields.hasErrors('mood')}"
+                   th:errors="*{mood}"
+                   class="invalid-feedback text-danger">Mood error message</small>
         </div>
 
         <div class="button-holder d-flex justify-content-center">
