--- a/SoftUni HTML & CSS/CSS Box Model And Typography/Resources/08/component-button.css
+++ b/SoftUni HTML & CSS/CSS Box Model And Typography/Resources/08/component-button.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font: 14px/1.5 'Lato' sans-serif
+    font: 14px/1.5 Lato sans-serif
 }
 
 body {
